[package]
name = "bencho"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "*", features = ["derive"] }
miette = {version = "*" }
fontdb = { version = "*"}
backon = { version = "*" }
resvg = { version = "0.29.0" }
serde_json = { version = "*" }
tempfile = { version = "*" }
poloto = { version = "*" }
hyperfine-lib = { path = "../hyperfine-lib" }
anyhow = "1.0.85"


[dependencies.clap]
version = "4"
default-features = false
features = ["suggestions", "color", "wrap_help", "cargo", "help", "usage", "error-context", "std", "derive"]

[build-dependencies]
clap = "4.4.12"
