[package]
name = "bencho"
version = "0.1.0"
edition = "2021"
maintainer = ["Nichita Morcotilo nmorkotilo@gmail.com"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.85"
backon = { version = "*" }
fontdb = { version = "*" }
hyperfine-lib = { path = "../hyperfine-lib" }
miette = { version = "*" }
poloto = { version = "*" }
resvg = { version = "0.29.0" }
serde = { version = "*", features = ["derive"] }
serde_json = { version = "*" }
tempfile = { version = "*" }

[dependencies.clap]
version = "4"
default-features = false
features = ["suggestions", "color", "wrap_help", "cargo", "help", "usage", "error-context", "std", "derive"]
